# CRISP_CVCP

./: fix_imports.sh  go.mod  go.sum
CRISP_go/: CRISP_go  circuit_crisp.go  circuit_crisp.go.orig  circuit_crisp.go.patch  circuit_dummy.go  circuit_sha.go  main.go  main_test.go
CRISP_go/zkbpp/: circuit.go  circuit_gates.go  circuit_var.go  crisp.go  gates_rq.go  proof.go
HE/CRISP_HE/: SM2.go  examples_DS.go  examples_Dist.go  examples_SM.go  examples_ckks.go
HE/ckks/: ciphertext.go  ckks.go  ckks_benchmarks_test.go  ckks_test.go  encoder.go  encryptor.go  evaluator.go  keygen.go  operand.go  params.go  plaintext.go  utils.go
HE/ring/: prng.go  ring.go  ring_context.go
ZKCE/ZKCE_Arith/: CMakeLists.txt
ZKCE/ZKCE_Arith/src/: Scheme.h  SerializationUtils.cpp  sqrtFct.cpp
ZKCE/ZKCE_Bin/: TimeProve.csv  a.out  boolVerif  boolcir  go.mod
